# json_logic

./: .gitignore  CMakeLists.txt  Makefile.default  README.md
examples/: BUILD.txt  testeval.cc
include/json_logic_cpp/: logic.hpp
include/json_logic_cpp/details/: ast-core.hpp  ast-full.hpp  cxx-compat.hpp
include/jsonlogic/: logic.hpp
include/jsonlogic/details/: ast-core.hpp  ast-full.hpp
src/: logic.cc
tests/: run-tests.sh
